# Develop-a-digital-asset-platform

./: .gitignore  README.md  schema.sql
backend/: .env  .env.example  index.js  package-lock.json  package.json
contracts/evm/src/: HEXStablecoin.sol
contracts/move/: Move.toml  Published.toml
contracts/move/sources/: hex_coin.move  hex_settlement.move
engine/: .env  Cargo.toml
engine/src/: api.rs  main.rs  order.rs  orderbook.rs  routes.rs  types.rs
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/balance/: route.ts
frontend/src/app/api/balance/update/: route.ts
frontend/src/app/api/user/: route.ts
frontend/src/components/: Auth.tsx  Providers.tsx
frontend/src/lib/: db.ts  zklogin.ts
matching_engine/: Cargo.toml
matching_engine/src/: engine.rs  lib.rs  main.rs  model.rs
